# claude_code_py

./: README.md  __init__.py  main.py
claude_code_py/: IMPLEMENTATION.md  __init__.py  main.py  pyproject.toml  requirements.txt
claude_code_py/constants/: prompts.py
claude_code_py/core_types/: __init__.py  ids.py  message.py  tools.py
claude_code_py/engine/: coordinator_mode.py  deps.py  process_input.py  query.py  query_engine.py
claude_code_py/memory/: __init__.py  agent_memory.py  paths.py
claude_code_py/orchestration/: executor.py
claude_code_py/services/: cached_mc_state.py  compact.py  compact_prompt.py  session_memory_compact.py
claude_code_py/state/: __init__.py  app_state.py  store.py
claude_code_py/storage/: __init__.py  session.py
claude_code_py/task/: in_process_teammate.py
claude_code_py/tests/swarm/: test_collaboration.py
claude_code_py/tool/: base.py  context.py
claude_code_py/tools/: file_edit_tool.py  file_read_tool.py  file_write_tool.py  grep_tool.py
claude_code_py/tools/agent_tool/: builtin_agents.py  constants.py  run_agent.py
claude_code_py/tools/ask_user_question/: __init__.py
claude_code_py/tools/plan_mode/: constants.py  enter_plan_mode.py  plan_mode_v2.py  prompt.py  state.py
claude_code_py/tools/send_message_tool/: prompt.py  send_message_tool.py
claude_code_py/ui/: demo_teammate_view.py  escape_input.py
claude_code_py/utils/: __init__.py  abort_controller.py  api_config.py  context.py  debug_log.py  forked_agent.py  json_utils.py  model.py  rich_status_display.py  teammate_context.py  teammate_mailbox.py  thinking.py  worktree.py
(+111 files in other folders)
